4.0
  - Multi data model support.
  - Added a second demo-model.

3.7.10
  - Fixed a bug concerning appending of layouts in the data browser.
  - Better integration of the closure-border-browser.

3.7.9
  - Added ability to hide table-browser windows from views.
  - Added ability to append a stored layout.
  - Added context menu for thumbnailed browser windows.
  - Added "Show in New Window" feature.
  - Filter-condition historization.

3.7.8
  - Fixed a performance issue within the Data Browser.
  - Improved rendering of null values.

3.7.7
  - Added desktop context menu.
  - Minor GUI improvements.

3.7.6
  - Border-Browser Feature introduced in data browser.
  - Fixed a bug concerning multi-line VARCHAR content. (Jailer Bug ID: 3432301)

3.7.5
  - Fixed a bug concerning DATE literals in Oracle, the data browser now uses the "TO_DATE" function to specify the date pattern.
  - Minor GUI improvements.

3.7.4
  - moves new table browser to center of the desktop.
  - "Reconnect" and "New Window" menu items added.
  
3.7.3
  - Java 7 compatibility fix.
  - Desktop dragging.

3.7.2
  - Data Browser improvements:
    - Tree navigator.
    - Automatic Layouting.
    - Desktop scaling.

3.7.1
 - Query Builder generated incorrect queries when applied on a restored session. This bug has been fixed.
 - Added Demo Database.

3.7
 - Implemented the "Subset by Example" feature: Use the Data Browser to collect all the rows to be extracted and let Jailer create a model for that subset.
 - Store/Restore of browser layouts (Feature Request ID: 3176291)

3.6.12
 - Extended row limits in Data Browser.
 - Reduced memory footprint.

3.6.11
 - Improved Query Builder.

3.6.10
 - If a table has no primary key, an unique index on non-nullable columns is used as a key instead.

3.6.9
 - Minor GUI improvements.

3.6.8
 - Added ability to edit and execute arbitrary SQL statements in Data Browser.

3.6.7